# SSH-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
data/: id_ed25519  id_ed25519.pub
src/mcp/: mcp_server.py
src/ssh/: mcp_server.py  server_all.py  session_store.py  ssh_manager.py
src/ssh/tools/: __init__.py  base.py  bulk.py  db.py  diagnose.py  docker.py  files.py  journal.py  monitoring.py  net_debug.py  network.py  package.py  pkg.py  search.py  services_universal.py  system.py
src/ssh_mcp/: mcp_server.py  server.py  server_all.py  server_http.py  server_sse.py  session_store.py  ssh_manager.py
src/ssh_mcp/tools/: __init__.py  base.py  bulk.py  db.py  diagnostics.py  docker.py  files.py  files_advanced.py  net_debug.py  outage_prevention.py  pkg.py  services_universal.py  system.py
tests/: test_ssh_manager.py
