[project]
name = "ssh-mcp"
version = "0.3.0"
description = "A Model Context Protocol (MCP) server for SSH connections."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0"
]

[project.scripts]
ssh-mcp = "ssh_mcp.__main__:main"
ssh-mcp-server = "ssh_mcp.server_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_mcp"]
